# vidvaani

./: .gitignore  README.md  demo.html  index.html  pyproject.toml
demo_videos/deep_learning/: hindi.srt
slides/: iitgn-modern.css  youtube-hindi-dubbing.html  youtube-hindi-dubbing.md
yt_hindi/: __init__.py  cli.py  costs.py  downloader.py  pipeline.py  server.py  transcriber.py  translator.py  tts.py  ui.py  video.py
